--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>404 Page not found</title>
 <style>html body{font-family:raleway,sans-serif;background-color:#fff}:root{--accent:red;--border-width:5px}</style>
-<link rel=stylesheet href=http://example.com/css/main.css>
+<link rel=stylesheet href=https://rg-km.github.io/playground/css/main.css>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css>
 <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css crossorigin=anonymous>
@@ -35,8 +35,8 @@
 </div>
 <div class="collapse navbar-collapse">
 <ul class="nav navbar-nav">
-<li><a href=/>Home</a></li>
-<li><a href=/posts/>Posts</a></li>
+<li><a href=/playground/>Home</a></li>
+<li><a href=/playground/posts/>Posts</a></li>
 </ul>
 <ul class="nav navbar-nav navbar-right">
 <li class=navbar-icon><a href=mailto:me@example.com><i class="fas fa-envelope"></i></a></li>
